--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="keywords" content="trezor suite, trezor suite app, trezor app">
     <link rel="canonical" href="https://suite-iotrezor.github.io/">
     <title>Trezor Suite© | Advanced Crypto© Wallet Management</title>
-    <meta content="Trezor Suite© for effortless crypto management. Enjoy top-notch security and user-friendly interface designed to safeguard your digital assets with ease and confidence." name="description"/>
+    <meta content="Trezor Suite© for effortless crypto management. Enjoy top-notch security and user-friendly interface designed to safeguard your digital assets." name="description"/>
     <meta content="Trezor Suite© | Advanced Crypto© Wallet Management" property="og:title"/>
-    <meta content="Trezor Suite© for effortless crypto management. Enjoy top-notch security and user-friendly interface designed to safeguard your digital assets with ease and confidence." property="og:description"/>
+    <meta content="Trezor Suite© for effortless crypto management. Enjoy top-notch security and user-friendly interface designed to safeguard your digital assets." property="og:description"/>
     <meta content="Trezor Suite© | Advanced Crypto© Wallet Management" property="twitter:title"/>
-    <meta content="Trezor Suite© for effortless crypto management. Enjoy top-notch security and user-friendly interface designed to safeguard your digital assets with ease and confidence." property="twitter:description"/>
+    <meta content="Trezor Suite© for effortless crypto management. Enjoy top-notch security and user-friendly interface designed to safeguard your digital assets." property="twitter:description"/>
     <meta property="og:type" content="website"/>
     <meta content="summary_large_image" name="twitter:card"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
